<?xml version="1.0" encoding="utf-8"?>
<!--suppress AndroidElementNotAllowed -->
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="16dp">

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
<<<<<<< HEAD
        android:text="Find a Shelter"
=======
        android:text="@string/findAShelter_string"
>>>>>>> master
        android:textAppearance="@style/TextAppearance.AppCompat.Body1"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <android.support.constraint.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/shelterNameTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Name"
            android:textColor="@android:color/black"
            android:textSize="18sp" />

        <EditText
            android:id="@+id/shelterNameEditText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/shelterName_string"
            android:inputType="textPersonName"
<<<<<<< HEAD
            app:layout_constraintTop_toBottomOf="@+id/shelterNameTextView" />
=======
            app:layout_constraintStart_toStartOf="parent" />
>>>>>>> master
    </android.support.constraint.ConstraintLayout>

    <android.support.constraint.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/genderTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/gender_string"
            android:textColor="@android:color/black"
<<<<<<< HEAD
            android:textSize="18sp" />
=======
            android:textSize="18sp"
            android:visibility="visible" />
>>>>>>> master

        <RadioGroup
            android:id="@+id/genderRadioGroup"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:visibility="visible"
            app:layout_constraintTop_toBottomOf="@+id/genderTextView">

            <RadioButton
                android:id="@+id/maleRadio"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
<<<<<<< HEAD
                android:text="Male" />
=======
                android:text="@string/male_string"
                android:textSize="12sp" />
>>>>>>> master

            <RadioButton
                android:id="@+id/femaleRadio"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
<<<<<<< HEAD
                android:text="Female" />
=======
                android:text="@string/female_string"
                android:textSize="12sp" />
>>>>>>> master

            <RadioButton
                android:id="@+id/nonbinaryRadio"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
<<<<<<< HEAD
                android:text="Non-binary" />
=======
                android:text="@string/nonbinary_string"
                android:textSize="12sp" />
>>>>>>> master

            <RadioButton
                android:id="@+id/neitherRadio"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
<<<<<<< HEAD
                android:text="None" />
=======
                android:text="@string/none_string"
                android:textSize="12sp" />
>>>>>>> master
        </RadioGroup>
    </android.support.constraint.ConstraintLayout>

    <android.support.constraint.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/ageTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/ageRange_string"
            android:textColor="@android:color/black"
            android:textSize="18sp" />

        <RadioGroup
            android:id="@+id/ageRangeRadioGroup"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
<<<<<<< HEAD
            app:layout_constraintTop_toBottomOf="@+id/ageTextView">
=======
            android:layout_marginTop="8dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/ageTextView"
            tools:layout_editor_absoluteX="0dp">
>>>>>>> master

            <RadioButton
                android:id="@+id/familyRadio"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
<<<<<<< HEAD
                android:text="Families with Newborns"
=======
                android:text="@string/family_radio_string"
                android:textSize="12sp"
>>>>>>> master
                tools:layout_editor_absoluteY="32dp" />

            <RadioButton
                android:id="@+id/adultRadio"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
<<<<<<< HEAD
                android:text="Adults"
=======
                android:text="@string/adult_radio_string"
                android:textSize="12sp"
>>>>>>> master
                tools:layout_editor_absoluteY="32dp" />

            <RadioButton
                android:id="@+id/yaRadio"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
<<<<<<< HEAD
                android:text="Young Adults"
=======
                android:text="@string/youngAdult_radio_string"
                android:textSize="12sp"
>>>>>>> master
                tools:layout_editor_absoluteY="32dp" />

            <RadioButton
                android:id="@+id/anyoneRadio"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
<<<<<<< HEAD
                android:text="Anyone"
=======
                android:text="@string/anyone_string"
                android:textSize="12sp"
>>>>>>> master
                tools:layout_editor_absoluteY="32dp" />
        </RadioGroup>

    </android.support.constraint.ConstraintLayout>

<<<<<<< HEAD
    <Button
        android:id="@+id/shelterSearchButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Search" />
=======
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal"
        style="?android:buttonBarStyle">

        <Button
            android:id="@+id/shelterSearchButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            style="?android:attr/buttonBarButtonStyle"
            android:text="@string/search_string" />

        <Button
            android:id="@+id/mapSearchButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            style="?android:attr/buttonBarButtonStyle"
            android:text="@string/mapSearch_string" />
    </LinearLayout>
>>>>>>> master

</LinearLayout>